<resources>
    <string name="app_name">MotorcycleOrderManagement</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="delete_complete">Delete complete</string>
    <string name="motorcycle">Motorcycle</string>
    <string name="detail_order">Detail order</string>
    <string name="order">Order</string>
    <string name="add_image">Add image</string>
    <string name="delete_image">Delete image</string>
    <string name="motorcycle_name">Motorcycle name:</string>
    <string name="capacity">Capacity:</string>
    <string name="count">Count:</string>
    <string name="success">Success</string>
    <string name="customer_name">Customer name:</string>
    <string name="price">Price:</string>
    <string name="date_order">Date order:</string>
    <string name="order_id">Order id:</string>
    <string name="motorcycle_id">Motorcycle id:</string>
    <string name="save_success">Save success</string>
    <string name="save_fail">Save fail</string>
    <string name="motorcycle_empty">Motorcycle is empty</string>
    <string name="order_empty">Order is empty</string>
    <string name="name_empty">Name can\'t be empty</string>
    <string name="capacity_greater_than_zero">Capacity must be greater than 0</string>
    <string name="count_greater_than_zero" >Count must be greater than 0</string>
    <string name="customer_be_empty">Customer cannot be empty</string>
    <string name="price_greater_than_zero" >Price must be greater than 0</string>
    <string name="count_rather_than">Count of detail other rather than count of motorcycle</string>
</resources>