<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="order"
            type="com.example.motorcycleordermanagement.model.database.domain.Order" />
    </data>

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="16dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="center"
                android:text="@string/customer_name" />

            <EditText
                android:id="@+id/customer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:backgroundTint="@android:color/transparent"
                android:inputType="text"
                android:text="@={order.customer}" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="16dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="center"
                android:text="@string/price" />

            <EditText
                android:id="@+id/price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:backgroundTint="@android:color/transparent"
                android:inputType="number"
                android:text="@{String.valueOf(order.price)}" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="16dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="center"
                android:text="@string/date_order" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/date_order"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:enabled="false"
                    android:gravity="center|start"
                    android:inputType="text"
                    android:textColor="?attr/blackWhite"
                    android:textColorHighlight="?attr/greyColor" />

                <ImageButton
                    android:id="@+id/calendar_choose"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:tint="?attr/blackWhite"
                    app:backgroundTint="@android:color/transparent"
                    app:srcCompat="@drawable/ic_calendar" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/success"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/success"
            android:textAllCaps="false" />
    </LinearLayout>
</layout>