<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="motorcycle"
            type="com.example.motorcycleordermanagement.model.database.domain.Motorcycle" />
    </data>

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ViewSwitcher
            android:id="@+id/image_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="64dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="64dp"
                    android:background="@drawable/doter">

                    <androidx.coordinatorlayout.widget.CoordinatorLayout
                        android:id="@+id/add_image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/ripple"
                        android:clickable="true"
                        android:focusable="true">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_gravity="center">

                            <ImageButton
                                android:layout_width="36dp"
                                android:layout_height="36dp"
                                android:adjustViewBounds="true"
                                android:background="@android:color/transparent"
                                android:drawableLeft="@drawable/ic_add"
                                android:gravity="center"
                                android:padding="8dp"
                                android:scaleType="fitCenter"
                                android:tint="?attr/blackWhite"
                                app:elevation="0dp"
                                app:rippleColor="@android:color/transparent"
                                app:srcCompat="@drawable/ic_add" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center"
                                android:text="@string/add_image"
                                android:textColor="?attr/blackWhite"
                                android:textSize="18sp" />
                        </LinearLayout>
                    </androidx.coordinatorlayout.widget.CoordinatorLayout>
                </FrameLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="64dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="64dp"
                    android:background="@drawable/doter">

                    <androidx.coordinatorlayout.widget.CoordinatorLayout
                        android:id="@+id/delete_image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/ripple"
                        android:clickable="true"
                        android:focusable="true">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_gravity="center">

                            <ImageButton
                                android:layout_width="36dp"
                                android:layout_height="36dp"
                                android:adjustViewBounds="true"
                                android:background="@android:color/transparent"
                                android:drawableLeft="@drawable/ic_add"
                                android:gravity="center"
                                android:padding="8dp"
                                android:scaleType="fitCenter"
                                android:tint="?attr/blackWhite"
                                app:elevation="0dp"
                                app:rippleColor="@android:color/transparent"
                                app:srcCompat="@drawable/ic_trash" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center"
                                android:text="@string/delete_image"
                                android:textColor="?attr/blackWhite"
                                android:textSize="18sp" />
                        </LinearLayout>
                    </androidx.coordinatorlayout.widget.CoordinatorLayout>
                </FrameLayout>
            </LinearLayout>
        </ViewSwitcher>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="16dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="center"
                android:text="@string/motorcycle_name" />

            <EditText
                android:id="@+id/appliance_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:backgroundTint="@android:color/transparent"
                android:inputType="text"
                android:text="@={motorcycle.name}" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="16dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="center"
                android:text="@string/capacity" />

            <EditText
                android:id="@+id/capacity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:backgroundTint="@android:color/transparent"
                android:inputType="text"
                android:text="@{String.valueOf(motorcycle.capacity)}" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="16dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="center"
                android:text="@string/count" />

            <EditText
                android:id="@+id/count"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:backgroundTint="@android:color/transparent"
                android:inputType="text"
                android:text="@{String.valueOf(motorcycle.count)}" />
        </LinearLayout>

        <Button
            android:id="@+id/success"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/success"
            android:textAllCaps="false" />

    </LinearLayout>
</layout>